Levitation import of page 2528 rev 8879.

--- a/0-/GSoC:2010/Mentor Application.mediawiki
+++ b/0-/GSoC:2010/Mentor Application.mediawiki
@@ -9,15 +9,15 @@
 *Description:
 ** XMMS2 is the spiritual successor to the very successful XMMS project. The creators of XMMS got together in 2002 and spun out the XMMS2 sister project, the idea was from the beginning to correct some of the early mistakes in XMMS design. The project grew and now is a very different type of application compared to XMMS. The team behind XMMS2 focuses on audio quality, freedom of choice and powerful organization possibilities. Community-wise the team is around 15-20 regular contributors and over 70 people have at some time contributed to XMMS2.
 *Why is your group applying to participate? What do you hope to gain by participating?
-** This will be the fifth year we apply to GSoC and we still have the same motivation, because it's great fun! It gives us PR that we couldn't achieve in other ways and it introduces new developers to our community. It is also very educational for both the student and the mentor.
+** This will be the fifth year we apply to GSoC and we still have the same motivation, because it's great fun! We see the most valuable outcome of the GSoC a possibility to introduce new developers to our community. We think the code they do is awesome, but most of the time the best work done by these students are after the GSoC period. We hope to gain new, hungry and interesting people as developers!
 *What is the main public mailing list for your group?  
 ** xmms2-devel@lists.xmms.se
 *Where is the main IRC channel for your group?
 ** #xmms2 at freenode
 *What criteria do you use to select the members of your group? Please be as specific as possible.
-** We select members based on their involvement in the community (time, code contributed, social involvement) and their availability over the course of the GSoC program. We have a pool of past mentors whom we know we can rely on, but new mentors are also welcome if they have proved their ability to supervise a project.
+** We use a separate questioner for would-be-students. This questioner puts a lot of focus on if the student has participated in the XMMS2 community or other Open-Source projects before. We don't accept people that seems to fill in the questioner with boiler-plate texts, i.e. we take it very seriously. We also focus on technical description of the implementation in question. We do a lot of follow-up questions and usually the proposals are sent back and forth a couple of times. This year we will also focus more on the life situation, we have seen that not being able to put a lot of time on the GSoC usually leads to sub-standard contributions.
 *Has your group participated previously? If so, please summarize your involvement and any past successes and failures.  
-** We participated in the GSoC for the past three years and we feel that we achieved very successful outcomes. We also learned a lot during the process. There have of course been failures as well. These include disappearing students and failures to merge the topic-branches afterwards. Regarding disappearing students our plan is outlined below. The failure to merge the topic-branches when GSoC ends is going to be handled by the student merging smaller parts during the SoC instead of a huge patch in the end of the period. We will also avoid letting students work on projects which depend on XMMS2 features that are not fully cooked and ready.
+** We participated in the GSoC for the past four years and we feel that we achieved very successful outcomes. We also learned a lot during the process. There have of course been failures as well. These include disappearing students and failures to merge the topic-branches afterwards. Regarding disappearing students our plan is outlined below. The failure to merge the topic-branches when GSoC ends is going to be handled by the student merging smaller parts during the SoC instead of a huge patch in the end of the period. We will also avoid letting students work on projects which depend on XMMS2 features that are not fully cooked and ready.
 *If your group has not previously participated, have you applied in the past? If so, for what sort of participation?
 *What license does your organization use?
 **LGPL/GPL v2
@@ -28,9 +28,9 @@
 *What is the application template you would like contributors to your organization to use.
 **http://wiki.xmms2.xmms.se/wiki/Summer_of_Code_2010/Student_Application
 *What is your plan for dealing with disappearing contributors?
-** As we have done for the last three years, we are still working on our remote, solar-powered deadly nanobot-driven amphibian anaconda as a friendly encouragement for students to not drop their project. In the meantime, we will focus on choosing the right students in the first place. This means an extensive chat with all the serious candidates, to try to determine how available, reliable and honest they are. We will also ask a detailed project/work history (FOSS or not), to check whether the student has already proven to be capable of completing a project. During the GSoC, the mandatory IRC presence and status reports will help us keep track of people's work and involvement. We will try to communicate the expectations and requirements as clearly as possible, and the students will know that they will be failed if these are not met. This is two ways - just as we have to prepare for disappearing students - if students do not live up to the expectations, we need to make them "disappear" :) Someone very wise once said: If your student hasn't checked in code by the mid-term evaluation or if your student can't make themselves available to discuss the review, fail them. If you're not 85% certain that the student will continue with the project, fail them! Work with your students to set up expectations; if your student doesn't follow these expectations, but you're happy, Google doesn't care. But if you're not happy, then reiterate your expectations to the student and make sure they understand them. If they still don't live up to their expectations, ask them to leave. (Leslie Hawthorn) 
+** Our plan from the last couple of years (the remote, solar-powered deadly nanobot-driven anaconda) has unfortunately failed :( It turns out that nanobots are viable, but solar-power isn't enough just yet. While half the team is looking into cold fusion to power it instead. In the meantime, we will focus on choosing the right students in the first place. This means an extensive chat with all the serious candidates, to try to determine how available, reliable and honest they are. We will also ask a detailed project/work history (FOSS or not), to check whether the student has already proven to be capable of completing a project. New for this year is also that the administrator (Tobias) will host weekly IRC meetings with all students and mentors to make sure to check progress. Someone very wise once said: If your student hasn't checked in code by the mid-term evaluation or if your student can't make themselves available to discuss the review, fail them. If you're not 85% certain that the student will continue with the project, fail them! Work with your students to set up expectations; if your student doesn't follow these expectations, but you're happy, Google doesn't care. But if you're not happy, then reiterate your expectations to the student and make sure they understand them. If they still don't live up to their expectations, ask them to leave. (Leslie Hawthorn) 
 *What is your plan for dealing with disappearing members?
-** We always plan at least one backup mentor for each project, i.e. someone who has the time and expertise to step in if the original mentor had to disappear for a while, either as a planned absence or not. The community on the IRC channel can sometimes also help answer questions students might have even when no official members are available.
+** We always plan at least one backup mentor for each project, i.e. someone who has the time and expertise to step in if the original mentor had to disappear for a while, either as a planned absence or not. The community on the IRC channel can sometimes also help answer questions students might have even when no official members are available. On the other hand we have never had a problem with a mentor disappearing.
 *What steps will you take to encourage contributors to interact with your community before, during, and after the program?
 ** Hanging around on IRC will be a requirement, we will see non-IRCing as desertion. We will show our patented kindness and interest in the students work and persona.
 *What will you do to ensure that your accepted contributors stick with the project after the program concludes?
