Remove system specific filename part of regexp.
Levitation import of page 1159 rev 8891 (minor).

--- a/0-/Emacs C style.mediawiki
+++ b/0-/Emacs C style.mediawiki
@@ -12,7 +12,7 @@ Put this at the end of your <tt>.emacs</tt> to follow style guidelines. (For cor
    (setq c-basic-offset 4))
  
  (setq auto-mode-alist 
-       (cons '("/home/marco/dev/xmms2.*/.*\\.[ch]$" . xmms2-c-mode)  
+       (cons '("^.*/xmms2.*/.*\\.[ch]$" . xmms2-c-mode)  
  	    auto-mode-alist))
 
 == Correct Indentation and Alignment of Multi-Line Statements ==
