--- a/0-/Client:Promoe.mediawiki
+++ b/0-/Client:Promoe.mediawiki
@@ -26,6 +26,19 @@ The source can be found at the [http://git.xmms.se/ XMMS2 git tree]. You can get
 ** XMMS2 C++ bindings, which needs boost.
 * Qt 4.2 or newer
 
+=== Configuration ===
+
+You can configure Promoe to use Winamp Classic skins by following this process:
+
+  * Create a folder within the directory /home/**user**/.config/xmms2/clients/ 
+     (if using a file browser, you may need to adjust the settings so that hidden files are shown.
+
+ ** Create a new folder called 'promoe' and an additional folder within ../promoe/ called 'skins'. 
+     Any new skins can be extracted into their own respective folders in your new 
+     /home/**user**/.config/xmms2/clients/promoe/skins/ directory.
+
+*** Skins can now be toggled within the 'Theme settings' menu feature in Promoe.
+
 == Bugtracker ==
 
 Report bugs and request features in the [http://bugs.xmms2.xmms.se/ XMMS2 bugtracker]. Please file bugs under project "Client - Promoe".
