--- a/0-/Client:Promoe.mediawiki
+++ b/0-/Client:Promoe.mediawiki
@@ -30,7 +30,7 @@ The source can be found at the [http://git.xmms.se/ XMMS2 git tree]. You can get
 
 You can configure Promoe to use Winamp Classic skins by following this process:
 
-* Create a folder within the directory /home/**user**/.config/xmms2/clients/  
+* Go to the directory /home/**user**/.config/xmms2/clients/  
 ** (If using a file browser, you may need to adjust the settings so that hidden files are shown.
 
 * Create a new folder called 'promoe' and an additional folder within ../promoe/ called 'skins'. 
