/* Cleaner and Correct Version of the Emacs Style Below */ We don't add to the offset in extern blocks
Levitation import of page 1159 rev 8914 (minor).

--- a/0-/Emacs C style.mediawiki
+++ b/0-/Emacs C style.mediawiki
@@ -12,7 +12,8 @@ Instead create a file named <tt>xmms2-style.el</tt> and insert the following:
                (c-basic-offset . 4)
                (c-offsets-alist
                 (case-label . +)
-                (arglist-close . c-lineup-arglist-intro-after-paren))))
+                (arglist-close . c-lineup-arglist-intro-after-paren)
+                (inextern-lang . 0))))
 
 (defun maybe-xmms2-style ()
   "Set the style used in xmms2, requires smart tabs."
