--- a/0-/Clients.mediawiki
+++ b/0-/Clients.mediawiki
@@ -40,7 +40,7 @@ Actually, there are dozens of clients available which try to fit best into this 
 
 === Others ===
 
-You can find lots other players in the [[Clientlist | Client matrix]]. Here are some (not all) other players, which are just good-fitting, or special in some ways:
+You can find lots of other players in the [[Clientlist | Client matrix]]. Here are some (not all) other players, which are just good-fitting, or special in some ways:
 
 * [[Client:eq | eq]] lets you play with the equalizer if your player doesn't handle it
 * [[Client:Euphoria | Euphoria]] uses the Enlightenment Foundation Libraries
