--- a/0-/Using the application.mediawiki
+++ b/0-/Using the application.mediawiki
@@ -5,8 +5,8 @@ Please also view the manual pages - if you have the XMMS2 source they're in doc/
 
 = Quick Start =
 # Start the daemon: <code>xmms2-launcher</code>
-# Add some music: <code>xmms2 add /home/foo/music/awesome.ogg</code>
-# Play: <code>xmms2 play</code>
+# Add some music: <code>nyxmms2 add /home/foo/music/awesome.ogg</code>
+# Play: <code>nyxmms2 play</code>
 
 = The Daemon =
 
@@ -32,11 +32,11 @@ It is possible to get the daemon to listen on multiple sockets by setting core.i
 Note that, when using ipv6 and wildcards (address "::"), you might get problems depending on your system. Under Linux, letting a socket listen on "::" also means to listen on ipv4 (unless <code>/proc/sys/net/ipv6/bindv6only</code> is set to 1).
 
 = The clients =
-You can interact with the daemon using the 'xmms2' command-line client, which comes in the source tree, or [[XMMS2_Clients | other clients]].
+You can interact with the daemon using the 'nyxmms2' command-line client, which comes in the source tree, or [[XMMS2_Clients | other clients]].
 
 == xmms2 client options ==
 
-The basic CLI (command line interface) xmms2 client can use alternative paths for IPC. Simply set the <code>XMMS_PATH</code> environment variable to the appropriate path and then use the client.
+The basic CLI (command line interface) nyxmms2 client can use alternative paths for IPC. Simply set the <code>XMMS_PATH</code> environment variable to the appropriate path and then use the client.
 
 Alternative Unix socket path (using Bash shell):
 
@@ -45,12 +45,12 @@ Alternative Unix socket path (using Bash shell):
 equivalent:
 
   export XMMS_PATH="unix:///tmp/my-socket"
-  xmms2 list
+  nyxmms2 list
 
 for (t)csh users:
 
   setenv XMMS_PATH "unix:///tmp/my-socket"
-  xmms2 list
+  nyxmms2 list
 
 == Example usage of xmms2 client ==
 
@@ -60,11 +60,11 @@ Add all files in a directory to the medialib (recursively adds files in subdirec
 
 Add files to the playlist:
 
-  xmms2 add /some/path/*.ogg
+  nyxmms2 add /some/path/*.ogg
 
 Play:
 
-  xmms2 play
+  nyxmms2 play
 
 Query the medialib database (e.g. your favourite band):
 
@@ -86,8 +86,8 @@ Will match "redhot" and "red hot".
 
 Listen to a shoutcast stream (assuming curl plugin is installed) using the direct url (ie NOT a playlist file, but the url inside the playlist file, the playlist importing code is currently disabled):
 
-  xmms2 add http://207.200.96.225:8020
-  xmms2 play
+  nyxmms2 add http://207.200.96.225:8020
+  nyxmms2 play
 
 Enabling an effect:
 
@@ -98,6 +98,6 @@ Example of enabling replaygain:
 
   xmms2 config effect.order.0 replaygain
   xmms2 config replaygain.enabled 1
-  xmms2 play
+  nyxmms2 play
 
 [[Category: Users]]
